--- a/Python_Dictionary&Sets.ipynb
+++ b/Python_Dictionary&Sets.ipynb
@@ -1,19 +1,12 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Python Dictionary Examples"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": 1,
@@ -26,8 +19,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "dict_keys(['Thriller', 'Back in Black', 'The Dark Side of the Moon', 'The Bodyguard', 'Bat Out of Hell', 'Their Greatest Hits (1971-1975)', 'Saturday Night Fever', 'Rumours'])\n",
             "<class 'dict_keys'>\n",
@@ -68,6 +61,32 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MPpIUQkp5vXZ",
+        "outputId": "9ab11ab4-5697-45f1-9d23-f205504f8d81"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'name': 'John', 'age': 30, 'Country': 'USA', 'city': 'Chicago'}\n",
+            "{'name': 'John', 'age': 30, 'Country': 'USA', 'city': 'Chicago'}\n",
+            "{'name': 'John', 'age': 30, 'Country': 'USA', 'city': 'Chicago'}\n",
+            "[('name', 'John'), ('age', 30), ('Country', 'USA'), ('city', 'Chicago')]\n",
+            "Name exists in the dictionary.\n",
+            "['name', 'age', 'Country', 'city']\n",
+            "['John', 30, 'USA', 'Chicago']\n",
+            "{'name': 'John', 'Country': 'USA', 'city': 'Chicago'}\n",
+            "{'name': 'John', 'Country': 'USA'}\n",
+            "{'name': 'John', 'Country': 'USA', 'Profession': 'Doctor'}\n"
+          ]
+        }
+      ],
       "source": [
         "person = {\n",
         "    \"name\": \"John\",\n",
@@ -102,43 +121,11 @@
         "\n",
         "person.update({\"Profession\": \"Doctor\"})\n",
         "print(person)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "MPpIUQkp5vXZ",
-        "outputId": "9ab11ab4-5697-45f1-9d23-f205504f8d81"
-      },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'name': 'John', 'age': 30, 'Country': 'USA', 'city': 'Chicago'}\n",
-            "{'name': 'John', 'age': 30, 'Country': 'USA', 'city': 'Chicago'}\n",
-            "{'name': 'John', 'age': 30, 'Country': 'USA', 'city': 'Chicago'}\n",
-            "[('name', 'John'), ('age', 30), ('Country', 'USA'), ('city', 'Chicago')]\n",
-            "Name exists in the dictionary.\n",
-            "['name', 'age', 'Country', 'city']\n",
-            "['John', 30, 'USA', 'Chicago']\n",
-            "{'name': 'John', 'Country': 'USA', 'city': 'Chicago'}\n",
-            "{'name': 'John', 'Country': 'USA'}\n",
-            "{'name': 'John', 'Country': 'USA', 'Profession': 'Doctor'}\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "grades = {10: 10, 20: 20, 30: 30, 40: 40, 50: 50}\n",
-        "for key in grades:\n",
-        "    print(key, grades[key])\n",
-        "grades.clear()\n",
-        "print(grades)"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -146,11 +133,10 @@
         "id": "C4lHDdzJ7nG5",
         "outputId": "fdd77afa-2e29-4ada-818d-5ade8512f2ab"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "10 10\n",
             "20 20\n",
@@ -160,10 +146,38 @@
             "{}\n"
           ]
         }
+      ],
+      "source": [
+        "grades = {10: 10, 20: 20, 30: 30, 40: 40, 50: 50}\n",
+        "for key in grades:\n",
+        "    print(key, grades[key])\n",
+        "grades.clear()\n",
+        "print(grades)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3EvlCtzYDa-H",
+        "outputId": "a29c23ba-044a-49f0-bcc3-7a1cc4c5c6da"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{65, '30-Nov-82', 10.0, 'Michael Jacfon', 46.0, 'Pop, Rock, R&B', 'Thriller', 1982, None, '00:42:19'}\n",
+            "<class 'set'>\n",
+            "{65, '30-Nov-82', 10.0, 'Michael Jacfon', 46.0, 'Pop, Rock, R&B', 'Thriller', 1982, 'Michael Jane', None, '00:42:19'}\n",
+            "{65, '30-Nov-82', 10.0, 'Michael Jacfon', 46.0, 'Pop, Rock, R&B', 1982, 'Michael Jane', None, '00:42:19'}\n",
+            "Michael Jane is in the set\n"
+          ]
+        }
+      ],
       "source": [
         "# Convert list to set\n",
         "\n",
@@ -181,31 +195,40 @@
         "    print(\"Michael Jane is in the set\")\n",
         "else:\n",
         "    print(\"Michael Jane is not in the set\")\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "3EvlCtzYDa-H",
-        "outputId": "a29c23ba-044a-49f0-bcc3-7a1cc4c5c6da"
-      },
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{65, '30-Nov-82', 10.0, 'Michael Jacfon', 46.0, 'Pop, Rock, R&B', 'Thriller', 1982, None, '00:42:19'}\n",
-            "<class 'set'>\n",
-            "{65, '30-Nov-82', 10.0, 'Michael Jacfon', 46.0, 'Pop, Rock, R&B', 'Thriller', 1982, 'Michael Jane', None, '00:42:19'}\n",
-            "{65, '30-Nov-82', 10.0, 'Michael Jacfon', 46.0, 'Pop, Rock, R&B', 1982, 'Michael Jane', None, '00:42:19'}\n",
-            "Michael Jane is in the set\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9nvNcydCSwSm",
+        "outputId": "8181f6dd-fb4c-4c8d-bb59-9df4fa26098f"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'AC/DC', 'Back in Black'}\n",
+            "{'AC/DC', 'Back in Black'}\n",
+            "{'Thriller', 'AC/DC', 'Back in Black', 'The Dark Side of the Moon'}\n",
+            "{'Thriller'}\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "{'The Dark Side of the Moon'}"
+            ]
+          },
+          "execution_count": 17,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "album_set1 = set([\"Thriller\", 'AC/DC', 'Back in Black'])\n",
         "album_set2 = set([ \"AC/DC\", \"Back in Black\", \"The Dark Side of the Moon\"])\n",
@@ -219,58 +242,28 @@
         "# Find the difference in set1 but not set2\n",
         "print(album_set1.difference(album_set2)) # what is in set1 but not in set2\n",
         "album_set2.difference(album_set1)         # what is in set2 but not in set1\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "9nvNcydCSwSm",
-        "outputId": "8181f6dd-fb4c-4c8d-bb59-9df4fa26098f"
-      },
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'AC/DC', 'Back in Black'}\n",
-            "{'AC/DC', 'Back in Black'}\n",
-            "{'Thriller', 'AC/DC', 'Back in Black', 'The Dark Side of the Moon'}\n",
-            "{'Thriller'}\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'The Dark Side of the Moon'}"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 17
-        }
       ]
     },
     {
       "cell_type": "code",
       "execution_count": 18,
       "metadata": {
-        "id": "x-redA951A8x",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "x-redA951A8x",
         "outputId": "167b2baf-b98e-4f69-e507-34a5ee4cfcef"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "False"
             ]
           },
+          "execution_count": 18,
           "metadata": {},
-          "execution_count": 18
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -281,14 +274,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Check if subset\n",
-        "\n",
-        "set({\"Back in Black\", \"AC/DC\"}).issubset(album_set1)\n",
-        "# Check if superset\n",
-        "\n",
-        "album_set1.issuperset({\"Back in Black\", \"AC/DC\"})"
-      ],
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -296,18 +282,25 @@
         "id": "fgxpfimQUjz6",
         "outputId": "a5cb829d-a9b6-4a43-d5b7-c43874580a77"
       },
-      "execution_count": 21,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "True"
             ]
           },
+          "execution_count": 21,
           "metadata": {},
-          "execution_count": 21
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# Check if subset\n",
+        "\n",
+        "set({\"Back in Black\", \"AC/DC\"}).issubset(album_set1)\n",
+        "# Check if superset\n",
+        "\n",
+        "album_set1.issuperset({\"Back in Black\", \"AC/DC\"})"
       ]
     },
     {
@@ -322,14 +315,14 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "False"
             ]
           },
+          "execution_count": 19,
           "metadata": {},
-          "execution_count": 19
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -340,10 +333,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "l1= set(['rap','house','electronic music', 'rap'] )\n",
-        "print(l1)"
-      ],
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -351,19 +341,43 @@
         "id": "BViuHK_JTMq8",
         "outputId": "08a46a87-938e-4c46-d23a-24f2a21b3413"
       },
-      "execution_count": 23,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "{'house', 'rap', 'electronic music'}\n"
           ]
         }
+      ],
+      "source": [
+        "l1= set(['rap','house','electronic music', 'rap'] )\n",
+        "print(l1)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 29,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KazSIsT5V5TO",
+        "outputId": "bd276a28-a2c4-46c3-eb79-f213c81b3a85"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "A= [1, 2, 2, 1]\n",
+            "B= [1, 2]\n",
+            "sum1=6, sum2=3, 2 sets do not have equal sum\n",
+            "the sum of A is: 6\n",
+            "the sum of B is: 3\n"
+          ]
+        }
+      ],
       "source": [
         "#Consider the list A = [1, 2, 2, 1] and set B = set([1, 2, 2, 1]), does sum(A) == sum(B)?\n",
         "A = [1, 2, 2, 1]\n",
@@ -387,37 +401,11 @@
         "B = set([1, 2, 2, 1])\n",
         "print(\"the sum of A is:\", sum(A))\n",
         "print(\"the sum of B is:\", sum(B))\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KazSIsT5V5TO",
-        "outputId": "bd276a28-a2c4-46c3-eb79-f213c81b3a85"
-      },
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "A= [1, 2, 2, 1]\n",
-            "B= [1, 2]\n",
-            "sum1=6, sum2=3, 2 sets do not have equal sum\n",
-            "the sum of A is: 6\n",
-            "the sum of B is: 3\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "album_set1 = set([\"Thriller\", 'AC/DC', 'Back in Black'])\n",
-        "album_set2 = set([ \"AC/DC\", \"Back in Black\", \"The Dark Side of the Moon\"])\n",
-        "album_set3 = album_set1.union(album_set2)\n",
-        "print(album_set3)"
-      ],
+      "execution_count": 30,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -425,16 +413,35 @@
         "id": "EqN44OHfaHMD",
         "outputId": "7e0bc330-8ec2-4996-9025-77f0fa461f7f"
       },
-      "execution_count": 30,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "{'Thriller', 'AC/DC', 'Back in Black', 'The Dark Side of the Moon'}\n"
           ]
         }
+      ],
+      "source": [
+        "album_set1 = set([\"Thriller\", 'AC/DC', 'Back in Black'])\n",
+        "album_set2 = set([ \"AC/DC\", \"Back in Black\", \"The Dark Side of the Moon\"])\n",
+        "album_set3 = album_set1.union(album_set2)\n",
+        "print(album_set3)"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
